@@ -9,20 +9,21 @@ use mod_perl qw(1.07 StackedHandlers MethodHandlers Authen Authz);
 use Apache::Constants qw(:common M_GET FORBIDDEN REDIRECT);
 use Apache::AuthCookie::Params;
 use Apache::AuthCookie::Util;
+use Apache::AuthCookie::Autobox;
 use Apache::Util qw(escape_uri);
 
 sub recognize_user ($$) {
     my ($self, $r) = @_;
 
     # only check if user is not already set
-    return DECLINED if $r->connection->user;
+    return DECLINED unless $r->connection->user->is_blank;
 
     my $debug = $r->dir_config("AuthCookieDebug") || 0;
     my ($auth_type, $auth_name) = ($r->auth_type, $r->auth_name);
 
-    return DECLINED unless $auth_type && $auth_name;
+    return DECLINED if $auth_type->is_blank or $auth_name->is_blank;
 
-    return DECLINED unless $r->header_in('Cookie');
+    return DECLINED if $r->header_in('Cookie')->is_blank;
 
     my $cookie_name = $self->cookie_name($r);
 
@@ -31,7 +32,7 @@ sub recognize_user ($$) {
     return DECLINED unless $cookie;
 
     my ($user, @args) = $auth_type->authen_ses_key($r, $cookie);
-    if ($user and scalar @args == 0) {
+    if (!$user->is_blank and scalar @args == 0) {
         $r->log_error("user is $user") if $debug >= 2;
 
         # if SessionTimeout is on, send new cookie with new Expires.
@@ -258,7 +259,7 @@ sub authenticate ($$) {
         my ($auth_user, @args) =
             $auth_type->authen_ses_key($r, $ses_key_cookie);
 
-        if ($auth_user and scalar @args == 0) {
+        if (!$auth_user->is_blank and scalar @args == 0) {
 
             # We have a valid session key, so we return with an OK value.
             # Tell the rest of Apache what the authentication method and
@@ -359,9 +360,8 @@ sub authorize ($$) {
     my $reqs_arr = $r->requires or return DECLINED;
 
     my $user = $r->connection->user;
-    unless ($user) {
-
-        # user is either undef or =0 which means the authentication failed
+    if ($user->is_blank) {
+        # authentication failed
         $r->log_reason("No user authenticated", $r->uri);
         return FORBIDDEN;
     }
